--- a/css/styles.css
+++ b/css/styles.css
@@ -561,6 +561,13 @@ button {
         flex-direction: column;
     }
 
+    .filter-price{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        gap: var(--spacing-8);
+    }
+
     #shop-productos{
         display: grid;
         grid-template-columns: repeat(2, 50%);
